catalog/rhpds.service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"service.alpha.openshift.io/serving-cert-secret-name":"babylon-catalog-oauth-proxy-tls"},"labels":{"app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"babylon-catalog","app.kubernetes.io/version":"0.0.1","helm.sh/chart":"babylonCatalog-0.0.1"},"name":"babylon-catalog-oauth-proxy","namespace":"babylon"},"spec":{"ports":[{"name":"proxy","port":443,"protocol":"TCP","targetPort":8443}],"selector":{"app.kubernetes.io/com [...]
    service.alpha.openshift.io/serving-cert-secret-name: babylon-catalog-oauth-proxy-tls
    service.alpha.openshift.io/serving-cert-signed-by: openshift-service-serving-signer@1604957869
    service.beta.openshift.io/serving-cert-signed-by: openshift-service-serving-signer@1604957869
  creationTimestamp: "2021-04-28T20:15:06Z"
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: babylon-catalog
    app.kubernetes.io/version: 0.0.1
    helm.sh/chart: babylonCatalog-0.0.1
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
          f:service.alpha.openshift.io/serving-cert-secret-name: {}
        f:labels:
          .: {}
          f:app.kubernetes.io/managed-by: {}
          f:app.kubernetes.io/name: {}
          f:app.kubernetes.io/version: {}
          f:helm.sh/chart: {}
      f:spec:
        f:ports:
          .: {}
          k:{"port":443,"protocol":"TCP"}:
            .: {}
            f:name: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:app.kubernetes.io/component: {}
          f:app.kubernetes.io/name: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: "2021-04-28T20:15:06Z"
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:service.alpha.openshift.io/serving-cert-signed-by: {}
          f:service.beta.openshift.io/serving-cert-signed-by: {}
    manager: service-ca-operator
    operation: Update
    time: "2021-04-28T20:15:07Z"
  name: babylon-catalog-oauth-proxy
  namespace: babylon
  resourceVersion: "104632165"
  selfLink: /api/v1/namespaces/babylon/services/babylon-catalog-oauth-proxy
  uid: b9ac58ac-61a0-4c1a-8ff4-3b00035251b5
spec:
  clusterIP: 172.30.200.146
  ports:
  - name: proxy
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app.kubernetes.io/component: oauth-proxy
    app.kubernetes.io/name: babylon-catalog
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
