catalog/rhpds.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-utils-operator.redhat-cop.io/certs-from-secret: rhpds-tls
  name: babylon-catalog
  namespace: babylon
spec:
  host: rhpds.apps-dev.open.redhat.com
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: babylon-catalog-oauth-proxy
    weight: 100
  wildcardPolicy: None
